<resources>
    <string name="app_name">AntQuakes</string>
    <string name="sign_up">Sign Up</string>
    <string name="manage_all_your_customer_support">Manage all your customer support</string>
    <string name="forgot_password_recover_below">Forgot Password ? Recover Below</string>
    <string name="login">Login</string>
    <string name="logo" translatable="false">logo</string>
    <string name="antquakes" translatable="false">Antquakes</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="_234" translatable="false">+234</string>
    <string name="confirm">Confirm</string>
    <string name="copyright_2020_all_rights_reserved">Copyright © 2020 AntQuakes Inc. All rights reserved.</string>
    <string name="otp_code">OTP CODE</string>
    <string name="_29_sec"><u>29</u> sec</string>
    <string name="otp_auto_resend_in">OTP Auto Resend</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="open_message">Open Message</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_number">We\'ve sent an OTP to your number</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_login"><u>Back to login</u></string>
    <string name="forgot_password"><u>Forgot Password ?</u></string>
    <string name="referral_id">Referral Id</string>
    <string name="users_image">Users Image</string>
    <string name="airtime_logo" translatable="false">airtime logo</string>
    <string name="airtime">Buy Airtime</string>
    <string name="subscription">TV-Subscription</string>
    <string name="transfer">Transfer</string>
    <string name="bulk_sms">Bulk SMS</string>
    <string name="electric_bill">Electric Bill</string>
    <string name="savings">Savings</string>
    <string name="airtime_to_money">Airtime to $$</string>
    <string name="examination_e_pin">Exam E-PIN</string>
    <string name="antquake_logo" translatable="false">AntQuake Logo</string>
    <string name="powered_by_codeweb" translatable="false">Powered by CodeWeb</string>
    <string-array name="meterType">
        <item>Prepaid</item>
        <item>Postpaid</item>
    </string-array>
    <string-array name="electricCompany">
        <item>Distribution Company</item>
        <item>Ikeja Electric - IKEDC</item>
        <item>Eko Electric - EKDC</item>
        <item>Jos Electric - JED</item>
        <item>Ibadan Electric - IBEDC</item>
        <item>Port-Harcourt Electric - PHEDC</item>
        <item>Kano Electric - KEDCO</item>
    </string-array>
    <string-array name="amountCard">
        <item>Amount</item>
        <item>100</item>
        <item>200</item>
        <item>500</item>
        <item>1000</item>
    </string-array>
    <string-array name="walletAmt">
        <item>Wallet - ₦0</item>
    </string-array>
    <string-array name="dom">
        <item>Cable Package</item>
    </string-array>
    <string-array name="airtimeNetwork">
        <item>Select Network</item>
        <item>Airtel</item>
        <item>GLO</item>
        <item>MTN</item>
        <item>9Mobile</item>
    </string-array>
    <string-array name="dataBundle">
        <item>Daily Plan</item>
        <item>Weekly Plan</item>
        <item>Monthly Plan</item>
        <item>Binge Plan</item>
    </string-array>
    <string-array name="dataType">//subject to removal @osas note that
        <item>100MB @ ₦100</item>
        <item>100MB @ ₦100</item>
        <item>100MB @ ₦100</item>
        <item>100MB @ ₦100</item>
    </string-array>
    <string-array name="examBody">//subject to removal @osas note that
        <item>Examination Body</item>
        <item>WAEC</item>
        <item>NECO</item>
        <item>GCE</item>
        <item>NABTEB</item>
    </string-array>
    <string-array name="cableTv">
        <item>Bouquet / Package</item>
        <item>Dstv</item>
        <item>Gotv</item>
        <item>StarTimes</item>
    </string-array>
    <string-array name="gotvPackage">//subject to removal @osas note that
        <item>Gotv Plus @ ₦1900</item>
        <item>Gotv Compact @ ₦2100</item>
        <item>Gotv Joli @ ₦2400</item>
        <item>Gotv Mac @ ₦3200</item>
    </string-array>
    <string-array name="dstvPackage">//subject to removal @osas note that
        <item>Dstv Plus @ ₦1900</item>
        <item>Dstv Compact @ ₦2100</item>
        <item>Dstv Joli @ ₦2400</item>
        <item>Dstv Mac @ ₦3200</item>
    </string-array>
    <string-array name="starPackage">//subject to removal @osas note that
        <item>Startimes Plus @ ₦1900</item>
        <item>Startimes Compact @ ₦2100</item>
        <item>Startimes Joli @ ₦2400</item>
        <item>Startimes Mac @ ₦3200</item>
    </string-array>
    <string-array name="upgradePlan">//don\'t remove its essential
        <item>Select a Plan</item>
        <item>Basic @ ₦3,000</item>
        <item>Reseller @ ₦10,000</item>
        <item>Agent @ ₦30,000</item>
    </string-array>
    <string-array name="currentPlan">//don\'t remove its essential
        <item>Free Plan</item>
    </string-array>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="we_ve_sent_an_otp_to_your_number">We\'ve sent an OTP to your Number</string>
    <string name="terms_of_use">By using this app, you agree to the <u> Terms of Use </u> and <u> Privacy Policy </u>.</string>
    <string name="title_activity_user_options">UserOptions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="fund_wallet">Fund Wallet</string>
    <string name="carry1st_credit">Carry1st Credit</string>
    <string name="transaction_history">Transaction History</string>
    <string name="logout">Logout</string>
    <string name="menu_share">menu share</string>
    <string name="with_atm_credit_debit_card">With ATM Credit/Debit Card</string>
    <string name="fund_wallet_online_with_credit_card_debit_card">Fund Wallet Online with Credit Card/Debit Card</string>
    <string name="amount">Amount</string>
    <string name="fund_wallet_online_with_credit_debit_card">Fund Wallet Online with Credit/Debit Card</string>
    <string name="pay_securely_with_paystack">Pay with PayStack</string>
    <string name="make_payment">Make Payment</string>
    <string name="reference_id">Reference ID</string>
    <string name="payment_logo">payment logo</string>
    <string name="submit">Submit</string>
    <string name="title_activity_dashboard_options">DashboardOptions</string>
    <string name="tab_text_1">Airtime</string>
    <string name="tab_text_2">Subscriptions</string>
    <string name="tab_text_3">Transfer</string>
    <string name="tab_text_4">Bulk SMS</string>
    <string name="tab_text_5">Electric Bill</string>
    <string name="tab_text_6">Bulk Airtime</string>
    <string name="tab_text_7">Buy Data Bundle</string>
    <string name="tab_text_8">Examination E-Pin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wallet_amount">Wallet Amount</string>
    <string name="buy_airtime">Buy Airtime</string>
    <string name="card_iuc_number">Card or IUC Number</string>
    <string name="cable_tv_subscription">Cable-TV Subscription</string>
    <string name="pay_electricity_bill">Pay Electricity Bill</string>
    <string name="meter_number_account_number">Meter or Account Number</string>
    <string name="meter_name_account_name">Meter or Account Name</string>
    <string name="pay_now">Pay Now</string>
    <string name="smart_card_iuc_name">Smart Card or IUC Name</string>
    <string name="send_sms">Send SMS</string>
    <string name="sender_id">Sender ID</string>
    <string name="destination_numbers">Destination Numbers</string>
    <string name="message">Message</string>
    <string name="receiver_username">Receiver Username</string>
    <string name="tranfer_money">Tranfer Money</string>
    <string name="buy_bulk_airtime">Buy Bulk Airtime</string>
    <string name="quantity">Quantity</string>
    <string name="buy">Buy</string>
    <string name="bulk_airtime">Bulk Airtime</string>
    <string name="buy_databundle">Buy DataBundle</string>
    <string name="buy_data_bundle">Buy Data Bundle</string>
    <string name="_1_500">1,500</string>
    <string name="exam_year">Exam Year</string>
    <string name="examination_pin">Examination E-Pin</string>
    <string name="buy_pin">Buy Pin</string>
    <string name="carry1st_username">Carry1st Username</string>
    <string name="buy_credit">Buy Credit</string>
    <string name="upgrade_to_agent">Upgrade to Agent</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="upgrade_account">Upgrade Account</string>
    <string name="upgrade">Upgrade</string>
    <string name="don_t_have_an_account"><u>Don\'t have an account ?</u></string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="walletamt">₦1,500</string>
    <string name="commission">Commission</string>
    <string name="udoh_jeremiah">Udoh Jeremiah</string>
    <string name="completed">Completed</string>
    <string name="wallet_balance_1_500">Wallet Balance: ₦1,500</string>
    <string name="payment_option_wallet">Payment Option: Wallet</string>
    <string name="we_can_t_notify_you_of_antquakes_promotions_if_you_do">Are you sure you want to log out ? \n We can\'t notify you of Antquakes \n promotions if you do.</string>
    <string name="cancel">Cancel</string>
    <string name="active">Active</string>
    <string name="change_password">Change Password</string>
    <string name="account_status">Account Status</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="show_password">Show Password</string>
    <string name="hide_pass">Hide Password</string>
    <string name="already_have_an_account">Already Have an account ?</string>
    <string name="complaint_response">Thank you for contacting us. We \n soon look into the matter.</string>
    <string name="lodge_complaint">Lodge </string>
    <string name="complaint_submitted">Complaint Submitted</string>
    <string name="complaint">Support</string>
    <string name="support_mechanism">Support Mechanism</string>
    <string name="name">Name</string>
    <string name="complaint_details">Help &amp; FeedBack</string>
    <string name="support_description">Describe your issue or Feedback</string>
    <string name="dashboard_options">DashBoard Options</string>
    <string name="antquakes_for_android">AntQuakes for Android</string>
    <string name="about_text">AntQuakes for Android is an app were you get all your service at a go, and Manage all your customer support in one place.</string>
    <string name="idada_osas_udoh_jeremiah_and"><u>Osaigbovo James Idada</u>, <u>Jeremiah Udoh</u> and <u>CodeWeb Developers</u></string>
    <string name="https_www_antquakes_com_ng"><u>https://www.antquakes.com.ng</u></string>
    <string name="feedback_mechanism"><u>FeedBack Mechanism</u></string>
    <string-array name="support_type">
        <item>Support Type</item>
        <item>Lodge FeedBack</item>
        <item>Lodge Help</item>
    </string-array>
</resources>