<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard"
    >

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.accounting.ant.ui.Dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.accounting.ant.ui.FundWallet.FundWalletFragment"
        android:label="@string/fund_wallet"
        tools:layout="@layout/fragment_fundwallet" />

    <fragment
        android:id="@+id/nav_creditFirst"
        android:name="com.accounting.ant.ui.Carry1stCredit.Carry1stFragment"
        android:label="@string/carry1st_credit"
        tools:layout="@layout/fragment_carry1stcredit" />

    <fragment
        android:id="@+id/nav_transHistory"
        android:name="com.accounting.ant.ui.TransHistory.TransHistoryFragment"
        android:label="@string/transaction_history"
        tools:layout="@layout/fragment_transhistory" />

    <fragment
        android:id="@+id/nav_logOut"
        android:name="com.accounting.ant.ui.Logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />


</navigation>