<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_main"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ForgotPassword">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="28dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:textColor="@color/blackcolor"
            android:text="@string/antquakes"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.341"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="30dp">

            <ImageView
                android:id="@+id/openEmail"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:src="@drawable/security"
                android:layout_margin="16dp"
                android:contentDescription="@string/open_message" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/forgot_password"
                android:textColor="@color/blackcolor"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:hint="@string/username"
                android:textColorHint="@color/signUp"
                android:textSize="18sp"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgot_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blackcolor"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="14dp"
                    android:inputType="text"
                    android:padding="20dp"
                    android:textColor="@color/signUp"
                    android:textColorHint="@color/signUp"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:hint="@string/email_address"
                android:textColorHint="@color/signUp"
                android:textSize="18sp"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgot_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blackcolor"
                    android:drawableStart="@drawable/email_change_pass_32dp"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="14dp"
                    android:inputType="textEmailAddress"
                    android:padding="20dp"
                    android:textColor="@color/blackcolor"
                    android:textColorHint="@color/blackcolor"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_button"
                android:padding="15dp"
                android:text="@string/reset_password"
                android:textColor="@color/background_main"
                android:textSize="17sp"
                android:textStyle="bold" />

            <!-- login back button -->
            <TextView
                android:id="@+id/backBtnLogin"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="@string/back_login"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/blackcolor"
                tools:ignore="HardcodedText,RtlHardcoded"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_margin="20dp"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/blackcolor"
                android:text="@string/terms_of_use"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
