<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".authOtp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/txtLogo"
            android:layout_width="300dp"
            android:layout_height="189dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="57dp"
            android:layout_marginLeft="57dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="54dp"
            android:layout_marginRight="54dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ant" />

        <TextView
            android:id="@+id/labelOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLogo"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="@string/otp_code"
            android:textColor="@color/signUp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailAdd"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelOtp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_otp_code"
            android:textColorHint="@color/signUp"
            android:textSize="18sp"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/signUp"
                android:drawablePadding="14dp"
                android:inputType="text"
                android:padding="30dp"
                android:textColor="@color/signUp"
                android:textColorHint="@color/signUp"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailAdd"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:layout_marginStart="265dp"
            android:layout_marginLeft="265dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="39dp"
            android:layout_marginRight="39dp"
            android:background="@color/signUp"
            android:gravity="center_horizontal"
            android:padding="18dp"
            android:text="@string/confirm"
            android:textColor="@color/background_main" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnConfirm"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="236dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/copyright_2020_all_rights_reserved"
            android:textColor="@color/signUp"
            android:textSize="16sp" />

    </RelativeLayout>
</ScrollView>